<resources>
    <string name="app_name">ParkingApp2</string>
    <string name="feat_login_login">Login</string>
    <string name="feat_login_appName">PARKING APP</string>
    <string name="feat_login_forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="feat_main_login">Login\n</string>
    <string name="feat_main_signup">Sign Up</string>
    <string name="feat_login_loading">Loading...</string>
    <string name="feat_login_error">Error: %s</string>
    <string name="feat_signup_signup">Sign Up</string>
    <string name="feat_signup_hint_phoneNumber">Enter phone...</string>
    <string name="feat_signup_continue">Continue</string>
    <string name="feat_signup_enterPhone">Enter your phone number</string>
    <string name="feat_spinner_countries_code_example">+1</string>
    <string name="feat_signup_enterCode">Enter your verification code</string>
    <string name="feat_signup_resend_code">You can resend in \t</string>
    <string name="feat_signup_username">Full Name</string>
    <string name="feat_login_error_bad_credentials_body">The password or username you’ve entered are incorrect. Try Again.</string>
    <string name="feat_login_error_bad_credentials_title">Wrong Credentials</string>
    <string name="feat_login_accepted">"Login Success! "</string>
    <string name="cancel">Cancel Button</string>
    <string name="feat_forgot_password">Forgot password?</string>
    <string name="feat_forgot_password_enter_details">Enter your email or mobile number. We will send you a code to reset your password.</string>
    <string name="feat_forgot_password_hint_phoneEmail">Email ID / Mobile number</string>
    <string name="feat_forgot_password_submit">Submit</string>
    <string name="feat_signup_terms_and_conditions"><![CDATA[By signing up, you agree our Terms & Conditions and Privacy Policy.]]></string>
    <string name="feat_signup_password_conditions">Min 6. characters</string>
    <string name="feat_forgot_password_no_results">No search results.</string>
    <string name="feat_forgot_password_invalid_email_mobile">Invalid email or phone.</string>
    <string name="feat_forgot_password_invalid_email_mobile_title">Invalid Credentials</string>
    <string name="feat_reset_password">Reset Password</string>
    <string name="feat_reset_password_enterCode">Enter recovery code.</string>
    <string name="feat_reset_password_confirm_password">Confirm new password</string>
    <string name="feat_reset_password_new_password">new password</string>
    <string name="feat_reset_password_button">Submit</string>
    <string name="feat_reset_password_success">Password reset successfully</string>
    <string name="feat_signup_error_bad_credentials_body">The email already exists. If you forgot your password use the forgot password option</string>
    <string name="feat_reset_password_error_bad_credentials_title">Invalid Code</string>
    <string name="feat_reset_password_error_bad_credentials_body">Invalid Code.</string>
    <string name="feat_signup_error_send_code">There was an error sending the verification code. Please try again</string>
    <string name="feat_signup_error_bad_verification_code_title">Error Verification Code</string>
    <string name="feat_signup_error_verify_code">The verification code used didn\'t work. Try again</string>
    <string name="feat_signup_resend_code_timer">59s</string>
</resources>