<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.views.ForgotPasswordActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/icon"
        style="@style/ParkingApp.Widget.AppIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feat_login_appName"
        android:textAppearance="@style/ParkingApp.TextStyle.AppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/forgotPassword"
        style="@style/ParkingApp.Widget.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feat_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <TextView
        android:id="@+id/enterPhoneEmail"
        style="@style/ParkingApp.Widget.HelperTextView"
        android:text="@string/feat_forgot_password_enter_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneEmailInputLayout"
        style="@style/ParkingApp.Widget.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:hint="@string/feat_forgot_password_hint_phoneEmail"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/enterPhoneEmail"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/submitButton"
        style="@style/ParkingApp.Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_standard"
        android:layout_marginTop="@dimen/space_xlarge"
        android:elevation="0dp"
        android:text="@string/feat_forgot_password_submit"
        app:layout_constraintTop_toBottomOf="@id/phoneEmailInputLayout"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>