<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.views.ResetPasswordActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="0dp"
        app:contentInsetStart="@dimen/space_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/icon"
        style="@style/ParkingApp.Widget.AppIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feat_login_appName"
        android:textAppearance="@style/ParkingApp.TextStyle.AppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/resetPassword"
        style="@style/ParkingApp.Widget.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feat_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/ParkingApp.Widget.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxlarge"
        android:hint="@string/feat_reset_password_new_password"
        app:layout_constraintTop_toBottomOf="@id/resetPassword"
        app:passwordToggleDrawable="@drawable/selector_password_toggle"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordConditions"
        style="@style/ParkingApp.Widget.HelperTextView"
        android:text="@string/feat_signup_password_conditions"
        android:layout_marginTop="@dimen/space_small"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        style="@style/ParkingApp.Widget.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:hint="@string/feat_reset_password_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/passwordConditions"
        app:passwordToggleDrawable="@drawable/selector_password_toggle"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmationPasswordConditions"
        style="@style/ParkingApp.Widget.HelperTextView"
        android:text="@string/feat_signup_password_conditions"
        android:layout_marginTop="@dimen/space_small"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/resetPasswordButton"
        style="@style/ParkingApp.Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_standard"
        android:layout_marginTop="@dimen/space_xlarge"
        android:elevation="0dp"
        android:text="@string/feat_reset_password_button"
        app:layout_constraintTop_toBottomOf="@id/confirmationPasswordConditions" />

</androidx.constraintlayout.widget.ConstraintLayout>