<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/space_large">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:contentDescription="@null"
        android:src="@drawable/ic_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feat_login_appName"
        android:textAppearance="@style/ParkingApp.TextStyle.AppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/signup"
        style="@style/ParkingApp.Widget.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feat_signup_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <TextView
        android:id="@+id/enterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feat_signup_enterPhone"
        android:layout_marginTop="@dimen/space_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        />

    <Spinner
        android:id="@+id/spinnerCountries"
        style="@style/ParkingApp.Widget.Spinner"
        android:spinnerMode="dropdown"
        android:layout_width="wrap_content"
        android:minWidth="60dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/space_small"
        app:layout_constraintTop_toBottomOf="@id/enterPhone"
        app:layout_constraintEnd_toStartOf="@id/phoneNumberInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/phoneNumberInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_country_spinner"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        style="@style/ParkingApp.Widget.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/feat_signup_hint_phoneNumber"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/enterPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinnerCountries">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            style="@style/ParkingApp.Widget.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueSignUpButton"
        style="@style/ParkingApp.Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_standard"
        android:layout_marginTop="@dimen/space_xlarge"
        android:elevation="0dp"
        android:text="@string/feat_signup_continue"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>