<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/space_xxxlarge"
        >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/icon_standard"
            android:layout_height="@dimen/icon_standard"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_car"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/secondary"/>

        <TextView
            android:id="@+id/parkingApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feat_login_appName"
            android:textAppearance="@style/ParkingApp.TextStyle.Subtitle"
            android:layout_marginTop="@dimen/space_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xlarge"
            app:layout_constraintTop_toBottomOf="@id/parkingApp"
            style="@style/ParkingApp.Widget.MainButton"
            android:text="@string/feat_login_login"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            app:layout_constraintTop_toBottomOf="@id/login"
            style="@style/ParkingApp.Widget.MainButton"
            android:text="@string/feat_main_signup"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

    
